manifests/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    istio-injection: enabled # Включаем инжект сайдкаров Istio для неймспейса
