manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app
  labels:
    istio-injection: enable
