manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    istio-injection: disabled
