manifests/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    istio-injection: enabled
