manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v1
  namespace: istio-backend
  labels:
    version: v1
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: echoserver
      version: "v1"
  template:
    metadata:
      labels:
        app: echoserver
        version: "v1"
    spec:
      containers:
        - name: echoserver
          image: proxy-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v2
  namespace: istio-backend
  labels:
    version: v2
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: echoserver
      version: "v2"
  template:
    metadata:
      labels:
        app: echoserver
        version: "v2"
    spec:
      containers:
        - name: echoserver
          image: proxy-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
