manifests/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backends
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
