manifests/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: someapp-service
  namespace: my-app
spec:
  selector:
    app: someapp
  ports:
  - port: 80
    targetPort: 80
