manifests/5-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: eterna1ity-destination-rule
  namespace: my-app
spec:
  host: eterna1ity-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
