manifests/drules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: otus-hw4-app
  namespace: otus-hw4-ns
spec:
  host: otus-hw4-app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
