manifests/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: nginx-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: nginx-app
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
  - route:
    - destination:
        subset: v1
        host: nginx-service
        port:
          number: 80
      weight: 50
    - destination:
        subset: v2
        host: nginx-service
        port:
          number: 80
      weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-destinationrule
  namespace: nginx-app
spec:
  host: nginx-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---
